bin/tests/snapshots/shellcheck__b5a3d001650e5b5cbd4087069b1f8083_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.all.exec = ''
  for p in ${lib.escapeShellArgs platforms}; do echo "$p"; done
''; }
---
