bin/tests/snapshots/shellcheck__b61f8b5016b830aa6f750b8b5defc1c9_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ systemd.services.web = { script = ''
  cd $STATE_DIRECTORY
''; }; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 { systemd.services.web = { script = ''
-  cd $STATE_DIRECTORY
+  cd "$STATE_DIRECTORY" || exit
 ''; }; }
