bin/tests/snapshots/shellcheck__b61f8b5016b830aa6f750b8b5defc1c9_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ systemd.services.web = { script = ''
  cd $STATE_DIRECTORY
''; }; }
---
<temp_file_path>>2:3:W:28:[shellcheck] SC2164: Use 'cd ... || exit' or 'cd ... || return' in case cd fails.
<temp_file_path>>2:6:W:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
