bin/tests/snapshots/shellcheck__b65530153e2bd24a4f6da7990a33e547_fix.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf "$DIR"/*
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 pkgs.writeShellApplication { name = "x"; text = ''
-  rm -rf "$DIR"/*
+  rm -rf "''${DIR:?}"/*
 ''; }
