bin/tests/snapshots/shellcheck__b65530153e2bd24a4f6da7990a33e547_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf "$DIR"/*
''; }
---
<temp_file_path>>2:10:W:28:[shellcheck] SC2115: Use "${var:?}" to ensure this never expands to /* .
