bin/tests/snapshots/shellcheck__b65530153e2bd24a4f6da7990a33e547_lint_json.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf "$DIR"/*
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shellcheck",
      "note": "ShellCheck found issues in an inline shell script",
      "code": 28,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 10
            },
            "to": {
              "line": 2,
              "column": 18
            }
          },
          "message": "SC2115: Use \"${var:?}\" to ensure this never expands to /* .",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 49
              },
              "to": {
                "line": 3,
                "column": 3
              }
            },
            "fix": "''\n  rm -rf \"''${DIR:?}\"/*\n''"
          },
          "fixable": true
        }
      ]
    }
  ]
}
