bin/tests/snapshots/shellcheck__bed95632ab6dc3504e215bba9c0f391e_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.hello.exec = ''
  echo $1
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 { scripts.hello.exec = ''
-  echo $1
+  echo "$1"
 ''; }
