bin/tests/snapshots/shellcheck__bed95632ab6dc3504e215bba9c0f391e_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.hello.exec = ''
  echo $1
''; }
---
<temp_file_path>>2:8:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
